# corporate-credit-ews

./: Makefile  README.md  pyproject.toml  requirements.txt
artifacts/backtest/: BACKTEST_REPORT.html  BACKTEST_REPORT.md  monthly_calibration.csv  monthly_metrics.csv  psi_monthly.csv  threshold_sweep.csv
artifacts/calibration/: calibrator.pkl  mapping.csv  thresholds.json
artifacts/calibration_iso/: calibrator.pkl  report.html  thresholds.json
artifacts/models/: baseline_metrics.json  model_lgbm.pkl  report.html  scores_all.csv  shap_summary.csv  thresholds.json
artifacts/monitoring/: monitoring_20251015_205032.json  monitoring_20251015_205606.json  monitoring_20251015_205632.json  monitoring_20251015_210236.json  monitoring_20251015_211316.json  monitoring_20251015_212024.json  monitoring_20251015_212623.json  monitoring_20251021_012350.json  monitoring_20251021_012953.json  monitoring_20251021_013352.json  monitoring_20251021_014810.json  monitoring_20251021_014904.json  monitoring_20251021_014922.json  monitoring_calibration.csv  monitoring_metrics.csv  monitoring_psi.csv  psi_details.csv
artifacts/scoring/: ews_scored_2025-06-30.csv  thresholds_used.json
artifacts/shap/: feature_importance.csv  summary.json  top_drivers_per_customer.csv
data/processed/: feature_ews.parquet  (+5 more)
notebooks/: pipeline.ipynb  quickstart.ipynb
src/: calibrate.py  create_portfolio.py  explain.py  feature_engineering.py  features.py  generate_data.py  make_scores_raw.py  model_monitoring.py  plot_validation.py  run_monitoring.py  scoring.py  stress_test.py  train_baseline.py
(+17 files in other folders)
