[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "corporate_credit_ews"
version = "0.0.1"
description = "An Early Warning System for Credit Risk Evaluation of Corporate Clients."
authors = [
  { name = "Duong N.C.K" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["corporate_credit_ews"]
include = ["pyproject.toml", "corporate_credit_ews/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["corporate_credit_ews"]
force-sort-within-sections = true

